tests/invalid/subscript_aug_assign_str/main.py
def main() -> None:
    s: str = "hello"
    s[0] += "x"
